# amazon-nova-ai-hackathon

./: .dockerignore  .env.example  .gitignore  .hadolintrc.yaml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_frontend.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependency-audit.yml  deploy.yml  test.yml
.streamlit/: config.toml
config/: prompt_loader.py  settings.py
config/prompts/: anti_impostor.yaml  application_guide.yaml  compass.yaml  cost_of_living.yaml  crisis.yaml  degree_explorer.yaml  hidden_curriculum.yaml  onboarding.yaml  role_model_matching.yaml  router.yaml  scholarships.yaml  student_aid.yaml  study_vs_apprenticeship.yaml  university_finder.yaml
docs/: ARCHITECTURE.md
frontend/: app.py
infra/: main.tf
koda/: .gitignore  pyproject.toml  requirements.txt
koda/docs/: ARCHITECTURE.md
koda/scripts/: verify_setup.py
koda/src/agents/: crisis.py
koda/src/agents/role_models/: anti_impostor.py  matching.py
koda/src/tools/: degree_database.py
scripts/: aws_login.sh  setup_deployment.sh  verify_setup.py  write_env_example.py
src/agents/: base.py  compass.py  crisis.py  onboarding.py  router.py
src/agents/academic_basics/: __init__.py  hidden_curriculum.py  study_vs_apprenticeship.py
src/agents/financing/: __init__.py  cost_of_living.py  scholarships.py  student_aid.py
src/agents/role_models/: __init__.py  anti_impostor.py  (+1 more)
src/api/: app.py
src/core/: client.py  conversation.py  documents.py  provenance.py  safety.py  session_bundle.py  session_summary.py
src/i18n/: __init__.py  strings.py
src/knowledge/: __init__.py  role_models.json  scholarships.json  source_registry.py  terminology.json
src/orchestration/: __init__.py  chat_service.py
src/ui/: __init__.py  quick_actions.py  session_profile.py
terraform/: README.md  alb.tf  cloudfront.tf  cloudwatch.tf  dynamodb.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  iam_ecs.tf  locals.tf  main.tf  main.tf.bak  outputs.tf  s3.tf  secrets.tf  security_groups.tf  terraform.tf  tfplan  variables.tf  vpc.tf  waf.tf
tests/: test_router.py
tests/integration/: __init__.py  test_api.py  test_placeholder.py
tests/scenarios/: README.md  de_bafoeg_basic.json  de_impostor_feelings.json  de_scholarships.json  en_ects_terminology.json  en_general_orientation.json  en_study_vs_apprenticeship.json  test_scenarios.py
tests/unit/: test_chat_service.py  test_client.py  test_conversation.py  test_cors_validation.py  test_crisis.py  test_documents.py  test_i18n.py  test_onboarding_agent.py  test_provenance.py  test_quick_actions.py  test_router.py  test_safety.py  test_session_bundle.py  test_session_profile.py  test_session_summary.py  test_source_registry.py
(+5 files in other folders)
